hphp/hack/test/typecheck/test_to_sort_extends.php.exp
File "test_to_sort_extends.php", line 22, characters 12-13:
Invalid return type (Typing[4110])
File "test_to_sort_extends.php", line 19, characters 37-37:
Expected B
File "test_to_sort_extends.php", line 19, characters 24-24:
But got A
